# NOS-Computer

./: .gitignore  NOS.circ  README.md
DigitalDesign/: ALU.dig  RegisterController.dig  RegisterModule.dig  main.dig
DigitalDesign/Registers/: RegisterController.dig  RegisterModule.dig
Documentation/: ALU.md  Register Controller.md  Register-Controller.md
Emulator/: CMakeLists.txt  build.sh
Emulator/header/: ALU.h  AdrReg.h  CPU.h  Reg.h  RegisterController.h  core.h
Emulator/headers/: ALU.h  Bus.h  CPU.h  Clock.h  GPR.h  IHasValue.h  IInstructionController.h  IRegisterController.h  InstructionController.h  Module.h  ModuleCommonControl.h  RAM.h  RegisterController.h
Emulator/src/: ALU.cpp  AdrReg.cpp  Bus.cpp  Bus.h  CPU.cpp  GPR.cpp  GPR.h  InstructionController.cpp  Module.cpp  ModuleCommonControl.cpp  NOS.cpp  RAM.cpp  Reg.cpp  RegisterController.cpp  main.cpp
Emulator/src/tests/: tosetup.cpp
Microcode/: NosMicroCode1  NosMicroCode2  NosMicroCode3  NosMicroCode4  NosMicroCode5  NosMicroCode6  NosMicroCodeGenerator.py  WordGenerator.py
Programs/Assembly/: fib.nosa
documentation/: ALU.md  General-Purpose-Registers.md  Register-Controller.md
